--- a/EcommercerWebAsembly/_Imports.razor
+++ b/EcommercerWebAsembly/_Imports.razor
@@ -12,3 +12,7 @@
 @using Blazored.LocalStorage
 @using Blazored.Toast
 @using Blazored.Toast.Services
+@using CurrieTechnologies.Razor.SweetAlert2
+
+@using EcommerceDTO;
+@using EcommerceWebAssembly.Services.Contract;
